# Taxi-Analysis

./: .gitignore  .gitignore.txt  API_DOCUMENTATION.md  CMakeLists.txt  LICENSE  README.md  config.ini  main.cpp  map.html
DataProcess/: generate_frequent_paths.py
TrafficAnalysisSystem/: TrafficAnalysisSystem.cpp  TrafficAnalysisSystem.h
include/: GPSPoint.h.txt  appconfig.h  databasemanager.h  datamanager.h  densityanalysis.h  frequentpathmanager.h  httpserver.h  logger.h  quadtree.h  utils.h
src/: appconfig.cpp  databasemanager.cpp  datamanager.cpp  densityanalysis.cpp  frequentpathmanager.cpp  httpserver.cpp  logger.cpp  main.cpp  quadtree.cpp
web/: app.js  app.js.bak  index.html  style.css
web/js/: app.js
web/js/core/: api.js  state.js  utils.js
web/js/features/density/: densityChart.js  densityService.js  densityStore.js  densityView.js
web/js/features/fastestPath/: fastestPathRegionService.js
web/js/features/frequentPath/: frequentPathRegionService.js  frequentPathService.js
web/js/features/region/: regionService.js  regionView.js
web/js/features/regionFlow/: singleRegionFlow.js
web/js/features/trajectory/: trajectoryService.js  trajectoryView.js
web/js/map/: map.js  regionSelection.js
web/js/map/overlays/: densityOverlay.js  taxiOverlay.js
web/js/ui/: dock.js
自己的东西/: CMakeLists.txt  map.html  需求.txt
自己的东西/include/: appconfig.h  databasemanager.h  datamanager.h  quadtree.h
自己的东西/src/: appconfig.cpp  databasemanager.cpp  datamanager.cpp  main.cpp  quadtree.cpp
